Fix window deserialization not restoring main window flag